remove AI yapping

--- a/products/green-tea-jasmine.html
+++ b/products/green-tea-jasmine.html
@@ -364,10 +364,6 @@
                             </div>
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
-                                <span class="text-gray-700">High-quality Indonesian green tea base</span>
-                            </div>
-                            <div class="flex items-center space-x-3">
-                                <div class="w-2 h-2 bg-primary rounded-full"></div>
                                 <span class="text-gray-700">Exquisite floral aroma</span>
                             </div>
                             <div class="flex items-center space-x-3">
@@ -533,11 +529,11 @@
                                 <i class="fas fa-check text-green-600"></i>
                             </div>
                             <div class="flex justify-between items-center">
-                                <span class="text-gray-700">Additional Testing Reports</span>
+                                <span class="text-gray-700">***** Testing Reports</span>
                                 <i class="fas fa-lock text-amber-600"></i>
                             </div>
                             <div class="flex justify-between items-center">
-                                <span class="text-gray-700">Safety Certificates</span>
+                                <span class="text-gray-700">***** Safety Certificates</span>
                                 <i class="fas fa-lock text-amber-600"></i>
                             </div>
                         </div>
