update all images with webp

--- a/index.html
+++ b/index.html
@@ -632,14 +632,11 @@ for your business
                             </div>
                             <h3 class="text-4xl font-bold text-gray-800">Black Tea</h3>
                             <p class="text-gray-700 leading-relaxed">
-                                Step into the world of Indonesian black tea, where robust character meets delightful complexity. Our premium black teas are meticulously hand picked from the fertile, volcanic soils of West Java, a region renowned for its ideal tea growing conditions.
-                            </p>
-                            <p class="text-gray-700 leading-relaxed">
-                                We honor the centuries old traditions of tea processing, carefully oxidizing the leaves to unlock their full bodied potential. This results in a brew that boasts a rich, often malty flavor profile with a captivating aroma, perfect for a bold morning start or a comforting afternoon escape.
+                                Step into the world of Indonesian black tea. Hand-picked from the fertile volcanic soils of West Java, our premium black teas are carefully oxidized to unlock their full-bodied potential. This results in a rich, often malty flavor with a captivating aroma, perfect for a bold morning start or a comforting afternoon escape
                             </p>
                             <div class="block lg:hidden col-span-2 row-span-2">
                                 <img 
-                                  src="/assets/images/black-tea-bop.jpg" 
+                                  src="/assets/images/black-tea-bop.webp" 
                                   alt="Black Tea Main" 
                                   class="rounded-xl shadow-lg w-full md:w-1/2 md:mx-auto h-auto object-cover" 
                                   loading="lazy"
@@ -655,7 +652,7 @@ for your business
                         <!-- Images -->
                         <div class="hidden lg:grid lg:w-1/2 grid-cols-2 lg:grid-cols-4 lg:grid-rows-2 gap-4">
                             <div class="col-span-2 row-span-2">
-                                <img src="/assets/images/black-tea-bop.jpg" alt="Black Tea Main" class="rounded-xl shadow-lg w-full h-full object-cover" loading="lazy">
+                                <img src="/assets/images/black-tea-bop.webp" alt="Black Tea Main" class="rounded-xl shadow-lg w-full h-full object-cover" loading="lazy">
                             </div>
                             <img src="/assets/images/black-tea-op.jpg" alt="Black Tea Closeup" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
                             <img src="/assets/images/black-tea-dust.jpg" alt="Black Tea Leaves" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
@@ -676,10 +673,7 @@ for your business
                             </div>
                             <h3 class="text-4xl font-bold text-gray-800">Green Tea</h3>
                             <p class="text-gray-700 leading-relaxed">
-                                Experience the refreshing and delicate essence of our green teas, a true testament to West Java's natural bounty. Sourced from the pristine, high altitude plantations nestled in the lush landscapes of West Java, these teas are minimally processed to preserve their inherent freshness and vibrant qualities.
-                            </p>
-                            <p class="text-gray-700 leading-relaxed">
-                                Unlike black tea, our green tea undergoes gentle heating right after harvesting. This careful process halts oxidation, locking in its natural antioxidants, vivid color, and a wonderfully clean taste. The result is a crisp, and incredibly healthy brew that's perfect for a moment of calm reflection or a revitalizing pick me up.
+                                Experience the refreshing and delicate essence of our green teas. Sourced from pristine, high-altitude plantations in West Java, these teas are minimally processed to preserve their inherent freshness and vibrant qualities. Gentle heating after harvest locks in natural antioxidants, vivid color, and a wonderfully clean, crisp taste
                             </p>
                             <div class="block lg:hidden col-span-2 row-span-2">
                                 <img 
@@ -701,9 +695,9 @@ for your business
                             <div class="col-span-2 row-span-2">
                                 <img src="/assets/images/green-tea-chun-mee.jpg" alt="Green Tea Main" class="rounded-xl shadow-lg w-full h-full object-cover" loading="lazy">
                             </div>
-                            <img src="/assets/images/green-tea-fannings.jpg" alt="Green Tea Closeup" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
-                            <img src="/assets/images/green-tea-sow-mee.jpg" alt="Green Tea Leaves" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
-                            <img src="/assets/images/green-tea-gun-powder.jpg" alt="Green Tea Gunpowder" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
+                            <img src="/assets/images/green-tea-fannings-thumb.webp" alt="Green Tea Closeup" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
+                            <img src="/assets/images/green-tea-jasmine.webp" alt="Green Tea Leaves" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
+                            <img src="/assets/images/green-tea-gunpowder-thumb.webp" alt="Green Tea Gunpowder" class="rounded-xl shadow-lg w-full h-auto object-cover aspect-square" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -721,10 +715,7 @@ for your business
                             </div>
                             <h3 class="text-4xl font-bold text-gray-800">Loose Leaf Tea</h3>
                             <p class="text-gray-700 leading-relaxed">
-                                We celebrate loose leaf tea as the ultimate way to experience tea. Unlike the crushed leaves found in pre packaged tea bags, our loose leaf teas are whole and unprocessed. This means every leaf retains its full flavor, rich aroma, and inherent health benefits, delivering a superior cup every time.
-                            </p>
-                            <p class="text-gray-700 leading-relaxed">
-                                Curious about how to brew it? It's simple! You can easily steep our loose leaf teas using a variety of methods: a steeping ball, an infuser, a French press, or a strainer. This approach also offers a great benefit: significantly less waste compared to traditional tea bags. Explore our diverse range of loose leaf options, including Gunpowder, White Tea, Green Tea, Yellow Tea, Black Tea, and Oolong, and discover the full potential of a truly exceptional tea experience.
+                                We celebrate loose leaf tea as the ultimate way to experience tea. Unlike pre-packaged tea bags, our loose leaf teas are whole and unprocessed, retaining their full flavor, rich aroma, and inherent health benefits. Easily steeped with a steeping ball, infuser, French press, or strainer, loose leaf also offers significantly less waste. Explore our diverse range, including Gunpowder, White, Green, Yellow, Black, and Oolong, for a truly exceptional tea experience
                             </p>
                             <div class="block lg:hidden col-span-2 row-span-2">
                                 <img 
