--- a/products/black-tea-bop.html
+++ b/products/black-tea-bop.html
@@ -36,7 +36,7 @@
     <meta property="og:type" content="product">
     <meta property="og:title" content="Premium Black Tea BOP Indonesia | Robust Export">
     <meta property="og:description" content="Premium Black Tea BOP (Broken Orange Pekoe) from West Java, Indonesia. Strong, malty, and bright cup, ideal for teabags and blends. Lab-tested, certified, and export-ready.">
-    <meta property="og:image" content="https://tropicafarm.com/assets/images/black-tea-bop.jpg">
+    <meta property="og:image" content="https://tropicafarm.com/assets/images/black-tea-bop.webp">
     <meta property="og:url" content="https://tropicafarm.com/products/black-tea-bop.html">
     <meta property="og:site_name" content="TropicaFarm">
 
@@ -44,7 +44,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Premium Black Tea BOP Indonesia | Robust Export">
     <meta name="twitter:description" content="Premium Black Tea BOP (Broken Orange Pekoe) from West Java, Indonesia. Strong, malty, and bright cup, ideal for teabags and blends. Lab-tested, certified, and export-ready.">
-    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/black-tea-bop.jpg">
+    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/black-tea-bop.webp">
 
     <link rel="canonical" href="https://tropicafarm.com/products/black-tea-bop.html">
 
@@ -391,7 +391,7 @@
                                 id: 'black-tea-bop-100g',
                                 name: 'Black Tea BOP - 100g (Sample Pack)',
                                 price: 10,
-                                image: '/assets/images/black-tea-bop.jpg'
+                                image: '/assets/images/black-tea-bop-thumb.webp'
                             })" 
                             class="w-full bg-secondary hover:bg-secondary/90 text-white py-3 px-6 rounded-lg font-medium transition-colors flex items-center justify-center"
                         >
@@ -834,8 +834,8 @@
       },
       "category": "Black Tea",
       "image": [
-        "https://tropicafarm.com/assets/images/black-tea-bop.jpg",
-        "https://tropicafarm.com/assets/images/black-tea-bop-thumbnail.jpg"
+        "https://tropicafarm.com/assets/images/black-tea-bop.webp",
+        "https://tropicafarm.com/assets/images/black-tea-bop-1.webp
       ],
       "offers": {
         "@type": "Offer",
