--- a/products/green-tea-fannings.html
+++ b/products/green-tea-fannings.html
@@ -36,7 +36,7 @@
     <meta property="og:type" content="product">
     <meta property="og:title" content="Green Tea Fannings Indonesia | Premium Export">
     <meta property="og:description" content="Premium Green Tea Fannings from West Java, Indonesia. Finely sorted for tea bags and blending, robust flavor, high antioxidants, lab-tested, certified quality.">
-    <meta property="og:image" content="https://tropicafarm.com/assets/images/green-tea-fannings.jpg">
+    <meta property="og:image" content="https://tropicafarm.com/assets/images/green-tea-fannings.webp">
     <meta property="og:url" content="https://tropicafarm.com/products/green-tea-fannings.html">
     <meta property="og:site_name" content="TropicaFarm">
 
@@ -44,7 +44,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Green Tea Fannings Indonesia | Premium Export">
     <meta name="twitter:description" content="Premium Green Tea Fannings from West Java, Indonesia. Finely sorted for tea bags and blending, robust flavor, high antioxidants, lab-tested, certified quality.">
-    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/green-tea-fannings.jpg">
+    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/green-tea-fannings.webp">
 
     <link rel="canonical" href="https://tropicafarm.com/products/green-tea-fannings.html">
 
@@ -391,7 +391,7 @@
                                 id: 'green-tea-fannings-100g',
                                 name: 'Green Tea Fannings - 100g (Sample Pack)',
                                 price: 10,
-                                image: '/assets/images/green-tea-fannings.jpg'
+                                image: '/assets/images/green-tea-fannings-thumb.webp'
                             })" 
                             class="w-full bg-secondary hover:bg-secondary/90 text-white py-3 px-6 rounded-lg font-medium transition-colors flex items-center justify-center"
                         >
@@ -834,8 +834,8 @@
       },
       "category": "Green Tea",
       "image": [
-        "https://tropicafarm.com/assets/images/green-tea-fannings.jpg",
-        "https://tropicafarm.com/assets/images/green-tea-fannings-thumbnail.jpg"
+        "https://tropicafarm.com/assets/images/green-tea-fannings.webp,
+        "https://tropicafarm.com/assets/images/green-tea-fannings-1.webp
       ],
       "offers": {
         "@type": "Offer",
@@ -874,7 +874,7 @@
         {
           "@type": "PropertyValue",
           "name": "Color",
-          "value": "Bright green-yellow (brewed liquor)"
+          "value": "Bright green-yellow (brewed)"
         },
         {
           "@type": "PropertyValue",
