--- a/products/green-tea-gunpowder.html
+++ b/products/green-tea-gunpowder.html
@@ -36,7 +36,7 @@
     <meta property="og:type" content="product">
     <meta property="og:title" content="Green Tea Gunpowder Indonesia | Premium Export">
     <meta property="og:description" content="Premium Green Tea Gunpowder from West Java, Indonesia. Distinct rolled pellet form, bright and strong cup, slightly smoky, high antioxidants, lab-tested, certified quality.">
-    <meta property="og:image" content="https://tropicafarm.com/assets/images/green-tea-gun-powder.jpg">
+    <meta property="og:image" content="https://tropicafarm.com/assets/images/green-tea-gunpowder.webp">
     <meta property="og:url" content="https://tropicafarm.com/products/green-tea-gunpowder.html">
     <meta property="og:site_name" content="TropicaFarm">
 
@@ -44,7 +44,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Green Tea Gunpowder Indonesia | Premium Export">
     <meta name="twitter:description" content="Premium Green Tea Gunpowder from West Java, Indonesia. Distinct rolled pellet form, bright and strong cup, slightly smoky, high antioxidants, lab-tested, certified quality.">
-    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/green-tea-gun-powder.jpg">
+    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/green-tea-gunpowder.webp">
 
     <link rel="canonical" href="https://tropicafarm.com/products/green-tea-gunpowder.html">
 
@@ -387,7 +387,7 @@
                                 id: 'green-tea-gunpowder-100g',
                                 name: 'Green Tea Gunpowder - 100g (Sample Pack)',
                                 price: 10,
-                                image: '/assets/images/green-tea-gun-powder.jpg'
+                                image: '/assets/images/green-tea-gunpowder-thumb.webp'
                             })" 
                             class="w-full bg-secondary hover:bg-secondary/90 text-white py-3 px-6 rounded-lg font-medium transition-colors flex items-center justify-center"
                         >
@@ -830,8 +830,8 @@
       },
       "category": "Green Tea",
       "image": [
-        "https://tropicafarm.com/assets/images/green-tea-gun-powder.jpg",
-        "https://tropicafarm.com/assets/images/green-tea-gun-powder-thumbnail.jpg"
+        "https://tropicafarm.com/assets/images/green-tea-gunpowder.webp",
+        "https://tropicafarm.com/assets/images/green-tea-gunpowder-1.webp"
       ],
       "offers": {
         "@type": "Offer",
