--- a/products/green-tea-jasmine.html
+++ b/products/green-tea-jasmine.html
@@ -36,7 +36,7 @@
     <meta property="og:type" content="product">
     <meta property="og:title" content="Jasmine Green Tea Indonesia | Premium Tea Export">
     <meta property="og:description" content="Premium Jasmine Green Tea from Indonesia. Naturally scented with fresh jasmine blossoms, offering a captivating floral aroma and refreshing taste. Lab-tested, certified quality.">
-    <meta property="og:image" content="https://tropicafarm.com/assets/images/green-tea-jasmine.jpg">
+    <meta property="og:image" content="https://tropicafarm.com/assets/images/green-tea-jasmine.webp">
     <meta property="og:url" content="https://tropicafarm.com/products/green-tea-jasmine.html">
     <meta property="og:site_name" content="TropicaFarm">
 
@@ -44,7 +44,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Jasmine Green Tea Indonesia | Premium Tea Export">
     <meta name="twitter:description" content="Premium Jasmine Green Tea from Indonesia. Naturally scented with fresh jasmine blossoms, offering a captivating floral aroma and refreshing taste. Lab-tested, certified quality.">
-    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/green-tea-jasmine.jpg">
+    <meta name="twitter:image" content="https://tropicafarm.com/assets/images/green-tea-jasmine.webp">
 
     <link rel="canonical" href="https://tropicafarm.com/products/green-tea-jasmine.html">
 
@@ -857,9 +857,8 @@
       },
       "category": "Green Tea",
       "image": [
-        "https://tropicafarm.com/assets/images/green-tea-jasmine.jpg",
-        "https://tropicafarm.com/assets/images/green-tea-fannings.jpg",
-        "https://tropicafarm.com/assets/images/green-tea-chun-mee.jpg"
+        "https://tropicafarm.com/assets/images/green-tea-jasmine.webp",
+        "https://tropicafarm.com/assets/images/green-tea-jasmine-1.webp"
       ],
       "offers": {
         "@type": "Offer",
