--- a/products/tea.html
+++ b/products/tea.html
@@ -951,7 +951,7 @@
         "@type": "Product",
         "name": "Black Tea",
         "description": "Robust Indonesian black tea from West Java, available for wholesale and bulk orders. Premium tea exporter.",
-        "image": "https://tropicafarm.com/assets/images/black-tea-bop.jpg",
+        "image": "https://tropicafarm.com/assets/images/black-tea-bop.webp",
         "brand": { "@type": "Brand", "name": "TropicaFarm" },
         "offers": {
           "@type": "AggregateOffer",
@@ -968,7 +968,7 @@
         "@type": "Product",
         "name": "Green Tea",
         "description": "Fresh and authentic Indonesian green tea from West Java highlands. Bulk tea supplier for global markets.",
-        "image": "https://tropicafarm.com/assets/images/green-tea-chun-mee.jpg",
+        "image": "https://tropicafarm.com/assets/images/green-tea-fannings.webp,
         "brand": { "@type": "Brand", "name": "TropicaFarm" },
         "offers": {
           "@type": "AggregateOffer",
