rename key points

--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -431,7 +431,7 @@
                             <div class="bg-blue-50 border border-blue-200 rounded-lg p-3 mb-2">
                                 <p class="text-sm text-blue-800">
                                     <i class="fas fa-eye mr-2"></i>
-                                    Detailed specifications, moisture content, processing methods and lab analysis revealed to qualified buyers
+                                    Detailed specifications, moisture content, processing methods and lab analysis are available upon request
                                 </p>
                             </div>
                             <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%27m%20interested%20in%20White%20Tea%20detailed%20specifications" target="_blank" class="text-primary hover:text-accent font-medium text-xs">
