--- a/products/black-tea-bopf.html
+++ b/products/black-tea-bopf.html
@@ -419,7 +419,7 @@
                             <div class="bg-blue-50 border border-blue-200 rounded-lg p-3 mb-2">
                                 <p class="text-sm text-blue-800">
                                     <i class="fas fa-eye mr-2"></i>
-                                    Detailed specifications, particle size analysis upon request for qualified buyers.
+                                    Detailed specifications, particle size analysis upon request
                                 </p>
                             </div>
                             <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%27m%20interested%20in%20Black%20Tea%20BOPF%20detailed%20specifications" target="_blank" class="text-primary hover:text-accent font-medium text-xs">
