--- a/products/green-tea-fannings.html
+++ b/products/green-tea-fannings.html
@@ -356,7 +356,7 @@
 
                     <!-- Key Features -->
                     <div class="mb-8">
-                        <h2 class="text-xl font-semibold text-gray-900 mb-4">Key Features</h2>
+                        <h2 class="text-xl font-semibold text-gray-900 mb-4">What Makes This Tea Special</h2>
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
@@ -416,7 +416,7 @@
                             <div class="bg-blue-50 border border-blue-200 rounded-lg p-3 mb-2">
                                 <p class="text-sm text-blue-800">
                                     <i class="fas fa-eye mr-2"></i>
-                                    Detailed specifications, precise particle size analysis, and lab analysis are available upon request for qualified buyers.
+                                    Detailed specifications, precise particle size analysis, and lab analysis are available upon request
                                 </p>
                             </div>
                             <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%27m%20interested%20in%20Green%20Tea%20Fannings%20detailed%20specifications" target="_blank" class="text-primary hover:text-accent font-medium text-xs">
