add PDP black tea PF

--- a/products/tea.html
+++ b/products/tea.html
@@ -326,20 +326,22 @@
 
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-6 mb-8">
                         <!-- PF (Pekoe Fannings) -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative hover:shadow-2xl transition-all duration-300" onclick="openVariantPopup('PF (Pekoe Fannings)', 'Quick-brewing, strong flavored tea, perfect for commercial tea bags.', '/assets/images/black-tea-pf.jpg')">
-                            <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
-                                <i class="fas fa-search text-white text-sm"></i>
-                            </div>
-                            <div class="relative">
-                                <div class="h-40 relative overflow-hidden">
-                                    <img src="/assets/images/black-tea-pf-thumbnail.jpg" alt="Black Tea PF - Indonesian tea wholesale bulk supplier" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                        <a href="/products/black-tea-pf.html">
+                            <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative hover:shadow-2xl transition-all duration-300">
+                                <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
+                                    <i class="fas fa-search text-white text-sm"></i>
                                 </div>
-                                <div class="p-4">
-                                    <h3 class="font-bold text-primary text-lg mb-1">PF (Pekoe Fannings)</h3>
-                                    <p class="text-sm text-gray-600">Quick-brewing & Commercial Grade</p>
+                                <div class="relative">
+                                    <div class="h-40 relative overflow-hidden">
+                                        <img src="/assets/images/black-tea-pf-thumb.webp" alt="Black Tea PF - Indonesian tea wholesale bulk supplier" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    </div>
+                                    <div class="p-4">
+                                        <h3 class="font-bold text-primary text-lg mb-1">PF (Pekoe Fannings)</h3>
+                                        <p class="text-sm text-gray-600">Quick-brewing & Commercial Grade</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- BOP (Broken Orange Pekoe) - BEST SELLER -->
                         <a href="/products/black-tea-bop.html">
