--- a/products/tea.html
+++ b/products/tea.html
@@ -342,6 +342,23 @@
                                 </div>
                             </div>
                         </a>
+                        <!-- Black Tea Fannings -->
+                        <a href="/products/black-tea-fannings.html">
+                            <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative hover:shadow-2xl transition-all duration-300">
+                                <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
+                                    <i class="fas fa-search text-white text-sm"></i>
+                                </div>
+                                <div class="relative">
+                                    <div class="h-40 relative overflow-hidden">
+                                        <img src="/assets/images/black-tea-fannings-thumb.webp" alt="Black Tea Fannings - Indonesian tea wholesale bulk supplier" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    </div>
+                                    <div class="p-4">
+                                        <h3 class="font-bold text-primary text-lg mb-1">Fannings</h3>
+                                        <p class="text-sm text-gray-600">Economical & Efficient</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
 
                         <!-- BOP (Broken Orange Pekoe) - BEST SELLER -->
                         <a href="/products/black-tea-bop.html">
