change flag to BEST PRICE

--- a/products/tea.html
+++ b/products/tea.html
@@ -616,7 +616,7 @@
                             <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-300 hover:shadow-2xl transition-all duration-300">
                                 <div class="absolute -top-0 -right-0 z-20">
                                     <div class="bg-amber-400 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
-                                        <i class="fas fa-crown mr-1"></i>PREMIUM
+                                        <i class="fas fa-crown mr-1"></i>BEST PRICE
                                     </div>
                                 </div>
                                 <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
